[gd_scene load_steps=5 format=3 uid="uid://w44kja7scjcp"]

[ext_resource type="Texture2D" uid="uid://da3n6ttkme5fs" path="res://characters/AnimationSheet_Character.png" id="1_a26gd"]
[ext_resource type="Script" path="res://equip2.gd" id="1_vlfqu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_676c6"]
atlas = ExtResource("1_a26gd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0tutn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_676c6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_vlfqu")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 1685.0
offset_bottom = 1200.0

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Control/VBoxContainer"]
modulate = Color(0.317647, 0.34902, 0.898039, 1)
texture_filter = 1
position = Vector2(1250, 510)
scale = Vector2(7.5, 7.5)
sprite_frames = SubResource("SpriteFrames_0tutn")

[node name="Button" type="Button" parent="Control/VBoxContainer/AnimatedSprite2D2"]
offset_left = -117.2
offset_top = -64.5333
offset_right = -67.2
offset_bottom = -30.5333
text = "Back"

[node name="Button2" type="Button" parent="Control/VBoxContainer/AnimatedSprite2D2"]
offset_left = -117.2
offset_top = 44.6667
offset_right = -66.2
offset_bottom = 82.6667
text = "Buy: $25"

[node name="Button3" type="Button" parent="Control/VBoxContainer/AnimatedSprite2D2"]
offset_left = 52.2667
offset_top = -63.0667
offset_right = 104.267
offset_bottom = -23.0667
text = "Equip"

[node name="Button4" type="Button" parent="Control/VBoxContainer/AnimatedSprite2D2"]
offset_left = 39.8667
offset_top = 47.4667
offset_right = 113.867
offset_bottom = 78.4667
text = "Unequip"

[connection signal="pressed" from="Control/VBoxContainer/AnimatedSprite2D2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/AnimatedSprite2D2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/AnimatedSprite2D2/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/AnimatedSprite2D2/Button4" to="." method="_on_button_4_pressed"]
